--- a/packages/jarl-react-native/package.json
+++ b/packages/jarl-react-native/package.json
@@ -7,18 +7,16 @@
     "sideEffects": false,
     "scripts": {
         "test": "jest --watch",
-        "build": "node ./tools/build.js",
-        "watch": "babel ./source -d . --ignore __tests__ --watch",
-        "prepublishOnly": "node ./tools/build.js",
         "clean": "git clean -fdX .",
         "lint": "eslint source",
         "coverage": "jest --coverage"
     },
-    "files": ["es", "umd", "lib", "index.js", "Link.js", "NativeProvider.js"],
+    "files": ["index.js", "Link.js", "NativeProvider.js"],
     "jest": {
         "setupFiles": ["raf/polyfill"],
         "testRegex": "__tests__/.+\\.test\\.js$",
-        "collectCoverageFrom": ["source/*.js", "source/lib/*.js"]
+        "preset": "react-native",
+        "collectCoverageFrom": ["*.js"]
     },
     "keywords": [
         "react",
@@ -42,33 +40,17 @@
     },
     "dependencies": {
         "prop-types": "^15.6.0",
-        "history": "^4.7.2",
-        "hoist-non-react-statics": "^2.0.0",
         "invariant": "^2.2.4",
         "jarl-react": "^0.8.0",
-        "qs": "^6.5.1",
         "warning": "^3.0.0"
     },
     "devDependencies": {
-        "babel-jest": "^22.0.4",
-        "babelrc-rollup": "^3.0.0",
-        "date-fns": "^1.29.0",
+        "babel-jest": "^22.1.0",
+        "babel-preset-react-native": "^4.0.0",
         "enzyme": "^3.2.0",
         "enzyme-adapter-react-16": "^1.1.0",
-        "gzip-size": "^4.1.0",
         "jest": "^22.1.4",
-        "pretty-bytes": "^4.0.2",
-        "raf": "^3.4.0",
         "react": "^16.2.0",
-        "react-addons-test-utils": "^15.6.2",
-        "react-dom": "^16.2.0",
-        "react-test-renderer": "^16.2.0",
-        "rollup": "^0.53.0",
-        "rollup-plugin-babel": "^3.0.2",
-        "rollup-plugin-commonjs": "^8.2.6",
-        "rollup-plugin-node-resolve": "^3.0.0",
-        "rollup-plugin-replace": "^2.0.0",
-        "rollup-plugin-uglify": "^2.0.1",
-        "uglify-es": "^3.3.2"
+        "react-native": "^0.49.5"
     }
 }
