--- a/packages/jarl-react-native/package.json
+++ b/packages/jarl-react-native/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jarl-react-native",
-    "version": "1.0.0-alpha.2",
+    "version": "1.0.0-alpha.3",
     "description": "React Native support for JARL",
     "main": "main.js",
     "sideEffects": false,
@@ -10,12 +10,20 @@
         "lint": "eslint source",
         "coverage": "jest --coverage"
     },
-    "files": ["index.js", "Link.js", "NativeProvider.js"],
+    "files": [
+        "index.js",
+        "Link.js",
+        "NativeProvider.js"
+    ],
     "jest": {
-        "setupFiles": ["raf/polyfill"],
+        "setupFiles": [
+            "raf/polyfill"
+        ],
         "testRegex": "__tests__/.+\\.test\\.js$",
         "preset": "react-native",
-        "collectCoverageFrom": ["*.js"]
+        "collectCoverageFrom": [
+            "*.js"
+        ]
     },
     "keywords": [
         "react",
@@ -40,7 +48,7 @@
     "dependencies": {
         "history": "^4.7.2",
         "invariant": "^2.2.4",
-        "jarl-react": "^1.0.0-alpha.2",
+        "jarl-react": "^1.0.0-alpha.3",
         "prop-types": "^15.6.0",
         "warning": "^3.0.0"
     },
