--- a/demo/package.json
+++ b/demo/package.json
@@ -22,7 +22,8 @@
         "react-redux": "^5.0.6",
         "rebass-emotion": "^1.0.7",
         "recompose": "^0.26.0",
-        "redux": "^3.7.2"
+        "redux": "^3.7.2",
+        "sanitize.css": "^5.0.0"
     },
     "devDependencies": {
         "babel-cli": "^6.26.0",
@@ -40,11 +41,15 @@
         "babel-preset-react": "^6.24.1",
         "babel-register": "^6.26.0",
         "babel-runtime": "^6.26.0",
+        "css-loader": "^0.28.11",
         "cypress": "^1.4.2",
+        "documentation": "^6.1.0",
         "extract-text-webpack-plugin": "^3.0.2",
         "opn": "^5.2.0",
+        "postcss-loader": "^2.1.3",
         "raw-loader": "^0.5.1",
         "react-hot-loader": "^4.0.0",
+        "style-loader": "^0.20.3",
         "webpack": "^4.1.0",
         "webpack-bundle-analyzer": "^2.11.1",
         "webpack-cli": "^2.0.10",
