--- a/demo/package.json
+++ b/demo/package.json
@@ -20,6 +20,7 @@
         "react-emotion": "^8.0.12",
         "react-helmet": "^5.2.0",
         "react-redux": "^5.0.6",
+        "react-remarkable": "^1.1.3",
         "rebass-emotion": "^1.0.7",
         "recompose": "^0.26.0",
         "redux": "^3.7.2",
