--- a/demo/package.json
+++ b/demo/package.json
@@ -15,6 +15,7 @@
         "jarl-react": "^1.0.0-alpha.3",
         "jarl-react-redux": "^1.0.0-alpha.3",
         "prop-types": "^15.6.0",
+        "ramda": "^0.25.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-emotion": "^8.0.12",
@@ -49,6 +50,7 @@
         "opn": "^5.2.0",
         "postcss-loader": "^2.1.3",
         "raw-loader": "^0.5.1",
+        "react-docgen": "^2.20.1",
         "react-hot-loader": "^4.0.0",
         "style-loader": "^0.20.3",
         "webpack": "^4.1.0",
